# file-explorer

./: Cargo.toml  LICENSE  fileExprorer.txt
src/: filesAddAndDelete.rs  findingFile.rs  main.rs  searchFile.rs  ui.rs
ui/: appwindow.slint
