[package]
name = "my-project"
version = "0.1.0"
authors = ["jakmodz <modzeleklm@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
open = "3.2.0"
rayon = "1.5"
rust_search = "2.0.0"
[build-dependencies]
slint-build = "1.6"
